tests/baselines/reference/templateStringUnterminated3.errors.txt
tests/cases/conformance/es6/templates/templateStringUnterminated3.ts(1,4): error TS1160: Unterminated template literal.


==== tests/cases/conformance/es6/templates/templateStringUnterminated3.ts (1 errors) ====
    `\\
       
!!! error TS1160: Unterminated template literal.